# msakw_baucer_trm

./: .replit  COMMIT_EDITMSG  DEPLOYMENT.md  Dockerfile  README.md  app.py  deploy.py  deployment_start.sh  helpers.py  index  keep_app_alive.py  monitor_app.py  netlify.toml  render.yaml  routes.py
CharityTracker/: DEPLOYMENT.md  app.py  deployment_start.sh  fly.toml  forms.py  init_db_data.py  keep_alive.py  models.py  pyproject.toml  render.yaml  replit_deploy.sh  start_with_monitor.sh  test_db.py
CharityTracker/instance/: app.db
CharityTracker/netlify/functions/: netlify_handler.py
CharityTracker/static/js/: main.js
CharityTracker/templates/: applications.html  index.html
logs/: HEAD
logs/refs/heads/: main  replit-agent
netlify/functions/: app.js
refs/heads/: main  replit-agent
static/css/: custom.css
templates/: application_form.html  layout.html
workflows/: deploy.yml
