[project]
name = "masjid-saidina-ali-assistance"
version = "1.0.0"
description = "Assistance Application System for Masjid Saidina Ali KW Kampung Padang Balang"
requires-python = ">=3.11"
authors = [
    {name = "Masjid Saidina Ali KW", email = "admin@example.com"}
]
readme = "README.md"
license = {text = "Private"}
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "routes>=2.5.1",
    "sqlalchemy>=2.0.39",
    "wtforms>=3.2.1",
]

[project.urls]
Home = "https://masjid-saidina-ali.example.com"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
